--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
         
     </head>
     <body  class="hold-transition sidebar-mini layout-fixed">
+
+        <!-- top menu -->
+        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+            <!-- Left navbar links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                <a href="index3.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                <a href="#" class="nav-link">Contact</a>
+                </li>
+            </ul>
+        </nav>
+
+
+
+
+
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
@@ -44,9 +65,13 @@
                 </div>
             </div>
 
-            <!-- Sidebar Menu: another type menu: remove nav-flat -->
+            <!-- Sidebar Menu: 
+                
+                - another type menu: remove nav-flat 
+                - nav-child-indent: for children menu
+            -->
             <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column nav-flat" data-widget="treeview" role="menu" data-accordion="false">
+                <ul class="nav nav-pills nav-sidebar flex-column nav-flat nav-child-indent" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
                     with font-awesome or any other icon font library -->
                 <li class="nav-item menu-open">
